--- a/index.html
+++ b/index.html
@@ -12,40 +12,15 @@
   </head>
   <body>
     <div class="enclose">
-      <div class="nav">
-        <h1 class="nav-element_logo">
-          BookPod<span class="nav-element_dot">.</span>
-        </h1>
-        <div class="nav-element_list-container">
-          <ul class="nav-element_ulist">
-            <li>
-              <a href="#">Home</a>
-            </li>
-            <li>
-              <a href="#">Categories</a>
-            </li>
-            <li>
-              <a href="#">Podcasts</a>
-            </li>
-          </ul>
+      <!-- working with css animations -->
+      <div class="superbox">
+        <div class="parent">
+          Parent
+          <div class="child-one child">One</div>
+          <div class="child-two child">Two</div>
+          <div class="child-three child">Three</div>
         </div>
-        <div class="nav-element_input">
-          <img src="./Assets/search.svg" alt="search" />
-          <input type="text" placeholder="Search..." />
-        </div>
-      </div>
-
-      <div class="content-and-cta">
-        <h1 class="content-and-cta_content">
-          Home of <span class="content-and-cta_number">100,000+</span
-          ><br />books and podcasts
-        </h1>
-        <h2 class="content-and-cta_content2">
-          Get the latest books and listen to the<br />
-          latest podcasts all in one place
-        </h2>
-        <button class="content-and-cta_cta">Get Started</button>
-      </div>
+      </div> 
     </div>
   </body>
 </html>
